<?xml version="1.0"?>
<package>
  <name>rrbot_plugin</name>
  <version>0.0.0</version>
  <description>The rrbot_plugin package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zihan@todo.todo">zihan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <gazebo_ros plugin_path="${prefix}/lib"
                  gazebo_media_path="${prefix}" />
  </export>
</package>
